Clients Question added

--- a/index.html
+++ b/index.html
@@ -344,37 +344,63 @@
                 <p class="text-base paragraph-font-color font-medium">Dit amet consectetur. Condimentum dignissim
                     adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
             </div>
-            <div class="flex lg:flex-row flex-col gap-5 p-6 border-solid border border-neutral-900 border-opacity-10 rounded-2xl">
+            <div class="flex lg:flex-row flex-col gap-10 p-6 mt-20 border-solid border border-neutral-900 border-opacity-10 rounded-2xl ">
                 <img src="./Images/11.png" alt="">
                 <div class="">
-                    <div class="collapse collapse-plus bg-base-200">
+                    <div class="collapse collapse-plus border-b-[0.12px] mb-[0.3px] rounded-none border-neutral-900 border-opacity-10">
                         <input type="radio" name="my-accordion-3" checked="checked" /> 
-                        <div class="collapse-title text-xl font-medium">
-                          Click to open this one and close others
+                        <div class="collapse-title text-black text-xl font-bold">
+                            Our Equipment
                         </div>
                         <div class="collapse-content"> 
-                          <p>hello</p>
+                          <p>Equipment quality standards are the criteria that define the performance, reliability, safety, and compliance of a device or system. They are important for ensuring customer satisfaction, reducing costs, and avoiding risks.</p>
                         </div>
                       </div>
-                      <div class="collapse collapse-plus bg-base-200">
+                      <div class="collapse collapse-plus border-b-[0.12px] mb-[0.3px] rounded-none border-neutral-900 border-opacity-10">
                         <input type="radio" name="my-accordion-3" /> 
-                        <div class="collapse-title text-xl font-medium">
-                          Click to open this one and close others
+                        <div class="collapse-title text-black text-xl font-bold">
+                            Hockey Training
                         </div>
                         <div class="collapse-content"> 
-                          <p>hello</p>
+                          <p>Installing a chin up bar above a doorway is one of the best hockey exercises as it provides for endless upper body strengthening both during the season and in the offseason as well.</p>
                         </div>
                       </div>
-                      <div class="collapse collapse-plus bg-base-200">
+                      <div class="collapse collapse-plus border-b-[0.12px] mb-[0.3px] rounded-none border-neutral-900 border-opacity-10">
                         <input type="radio" name="my-accordion-3" /> 
-                        <div class="collapse-title text-xl font-medium">
-                          Click to open this one and close others
+                        <div class="collapse-title text-black text-xl font-bold">
+                            Private Lessons
                         </div>
                         <div class="collapse-content"> 
-                          <p>hello</p>
+                          <p>Iceplex is excited to offer private individual and group hockey lessons open to all players (youth & adult) that have graduated from a Learn to Play hockey class.</p>
                         </div>
                       </div>
-                </div>
+                      <div class="collapse collapse-plus border-b-[0.12px] mb-[0.3px] rounded-none border-neutral-900 border-opacity-10">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-black text-xl font-bold">
+                            Ski Touring
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Ski touring is skiing in the backcountry on unmarked or unpatrolled areas. Touring is typically done off-piste and outside of ski resorts, and may extend over a period of more than one day. It is similar to backcountry skiing but excludes the use of a ski lift or transport.</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus border-b-[0.12px] mb-[0.3px] rounded-none border-neutral-900 border-opacity-10">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium text-black text-xl font-bold">
+                            Booking
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Ski touring is skiing in the backcountry on unmarked or unpatrolled areas. Touring is typically done off-piste and outside of ski resorts, and may extend over a period of more than one day. It is similar to backcountry skiing but excludes the use of a ski lift or transport.</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus border-b-[0.12px] mb-[0.3px] rounded-none border-neutral-900 border-opacity-10">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-black text-xl font-bold">
+                            Pricings
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Pricing is a process of fixing the value that a manufacturer will receive in the exchange of services and goods</p>
+                        </div>
+                      </div>
             </div>
 
         </section>
