--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         </section>
 
 
-        <section class="flex justify-around mt-20">
+        <section class="flex flex-col lg:flex-row justify-around mt-20">
 
             <!-- Contact section -->
 
@@ -472,23 +472,22 @@
 
             <div class="">
 
-                <div class="grid grid-cols-2 gap-x-6 ">
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-x-6 ">
                     <div class="">
                         <h3 class="text-black text-xl font-extrabold pb-6 pt-6">Your Name</h3>
-                        <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs
-                        max-h-16" disabled />
+                        <input type="text" placeholder="Enter your full name" class="input input-bordered w-full" />
                     </div>
                     <div class="">
                         <h3 class="text-black text-xl font-extrabold pb-6 pt-6">Your Email</h3>
-                        <input type="email" placeholder="Enter your email" class="input input-bordered w-full max-w-xs" disabled />
+                        <input type="email" placeholder="Enter your email" class="input input-bordered w-full"  />
                     </div>
                     <div class="">
                         <h3 class="text-black text-xl font-extrabold pb-6 pt-6">Subject   </h3>
-                        <input type="text" placeholder="Subject" class="input input-bordered w-full max-w-xs" disabled />
+                        <input type="text" placeholder="Subject" class="input input-bordered w-full"  />
                     </div>
                     <div class="">
                         <h3 class="text-black text-xl font-extrabold pb-6 pt-6">Your Name</h3>
-                        <input type="number" placeholder="Enter your phone number" class="input input-bordered w-full max-w-xs" disabled />
+                        <input type="number" placeholder="Enter your phone number" class="input input-bordered w-full" />
                     </div>
                 </div>
 
