--- a/index.html
+++ b/index.html
@@ -150,25 +150,25 @@
                     <div class="radial-progress" style="--value:87; color: #FF4240;" role="progressbar"> <span
                             class="text-black font-extrabold">87%</span></div>
                     <h5 class="text-gray-950 text-xl font-semibold pt-5 pb-4">Prayer Facility</h5>
-                    <p class="text-base font-medium">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    <p class="text-base font-medium"> you have created our bodies so uniquely that they can heal.</p>
                 </div>
                 <div class="text-center mt-6">
                     <div class="radial-progress" style="--value:95; color: #49D293;" role="progressbar"><span
                             class="text-black font-extrabold">95%</span></div>
                     <h5 class="text-gray-950 text-xl font-semibold pt-5 pb-4">Experienced Coach</h5>
-                    <p class="text-base font-medium">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    <p class="text-base font-medium">It is a wondrous mystery to me.</p>
                 </div>
                 <div class="text-center mt-6">
                     <div class="radial-progress" style="--value:90; color: #FFB546;" role="progressbar"><span
                             class="text-black font-extrabold">90%</span></div>
                     <h5 class="text-gray-950 text-xl font-semibold pt-5 pb-4">Senior Player</h5>
-                    <p class="text-base">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    <p class="text-base">I pray today that you help (name) heal from a hockey injury.</p>
                 </div>
                 <div class="text-center mt-6">
                     <div class="radial-progress" style="--value:80; color: #4C8DF1;" role="progressbar"><span
                             class="text-black font-extrabold">80%</span></div>
                     <h5 class="text-gray-950 text-xl font-semibold pt-5 pb-4">Training Ground</h5>
-                    <p class="text-base">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    <p class="text-base">AI pray today that you help (name) heal from a hockey injury.</p>
                 </div>
             </div>
         </section>
@@ -177,8 +177,7 @@
         <section>
             <div class="text-center border-t-2 border-b-2 border-dashed border-gray-300 py-8 space-y-4 ">
                 <h2 class="text-black text-4xl font-extrabold">Program Sections</h2>
-                <p class="text-base font-medium pt-5">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-                    turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+                <p class="text-base font-medium pt-5"> you have created our bodies so uniquely that they can heal. It is a wondrous mystery to me. I pray today <br> that you help (name) heal from a hockey injury./p>
             </div>
             <!-- All Program -->
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-14">
@@ -186,20 +185,16 @@
                 <div
                     class="text-white bg-[url('/images/2.png')] bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10 bg-center bg-blend-overlay bg-[#13131880] rounded-xl ">
                     <h3 class="text-3xl font-extrabold">Junior Program</h3>
-                    <p class="text-base font-medium pt-4 pb-6">Dolor sit amet consectetur. Ut urna diam quis sagittis.
-                        Elit elit <br>
-                        enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor
-                        congue sed et in.</p>
+                    <p class="text-base font-medium pt-4 pb-6">he creation of a new multi-faith prayer space on campus is the perfect example <br>
+                        Thompson Rivers University now offers students, faculty and staff private spaces <br> on campus to reflect, pray, and meditate.</p>
                     <a class="btn btn-error text-white text-xl">Register Now!</a>
                 </div>
                 <!-- Teenager Program -->
                 <div
                     class="text-white bg-[url('/images/3.png')] bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10 bg-center bg-blend-overlay bg-[#13131880] rounded-xl ">
                     <h3 class="text-3xl font-extrabold">Teenager Program</h3>
-                    <p class="text-base font-medium pt-4 pb-6">Dolor sit amet consectetur. Ut urna diam quis sagittis.
-                        Elit elit <br>
-                        enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor
-                        congue sed et in.</p>
+                    <p class="text-base font-medium pt-4 pb-6">reation of a new multi-faith prayer space on campus is the perfect example <br>
+                        hompson Rivers University now offers students, faculty and staff private spaces <br> on campus to reflect, pray, and meditate.</p>
                     <a class="btn btn-error text-white text-xl">Register Now!</a>
                 </div>
             </div>
@@ -207,10 +202,7 @@
             <div
                 class="text-white bg-[url('/images/4.png')] bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10 bg-center bg-blend-overlay bg-[#13131880] rounded-xl mt-6 ">
                 <h3 class="text-3xl font-extrabold">Professional Program</h3>
-                <p class="text-base font-medium pt-4 pb-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                    elit <br>
-                    enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue
-                    sed et in.</p>
+                <p class="text-base font-medium pt-4 pb-6">The spaces located in Old Main rooms OM 2494 and 2496 will be celebrated with <br> an opening ceremony March 26 at 10 a.m.</p>
                 <a class="btn btn-error text-white text-xl">Register Now!</a>
             </div>
         </section>
@@ -218,8 +210,7 @@
         <section>
             <div  class="text-center border-t-2 border-b-2 border-dashed border-gray-300 py-8 space-y-4 mt-28 mb">
                 <h2 class="text-4xl text-black text- font-extrabold pb-7">Our New Products</h2>
-                <p text-base paragraph-font-color font-medium>Dit amet consectetur. Condimentum dignissim adipiscing
-                    aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                <p text-base paragraph-font-color font-medium>The creation of a new multi-faith prayer space on campus is the perfect example of how we can problem-solve together as a campus community, . </p>
 
             </div>
                 <div class="grid gap-6 grid-cols-1 lg:grid-cols-2 lg:grid-rows-3 mt-12 mb-24">
@@ -237,7 +228,7 @@
                             </div>
                             <div class="">
                                 <h2 class="text-black text-xl font-extrabold pt-4 pb-4">World Cup Flags Football</h2>
-                                <p class=" text-base font-medium paragraph-font-color pb-4">Dolor sit amet consectetur. Ut urna diam <br>  quis sagittis. </p>
+                                <p class=" text-base font-medium paragraph-font-color pb-4">The creation of a new multi-faith <br> prayer space on campus   </p>
                             </div>
                             <div class="flex gap-5">
                                 <h3 class="text-lg font-extrabold primary-font-color">Price - $22.00</h3>
@@ -257,7 +248,7 @@
                             </div>
                             <div class="">
                                 <h2 class="text-black text-xl font-extrabold pt-4 pb-4">World Cup Flags Football</h2>
-                                <p class=" text-base font-medium paragraph-font-color pb-4">Dolor sit amet consectetur. Ut urna diam <br>  quis sagittis. </p>
+                                <p class=" text-base font-medium paragraph-font-color pb-4">The creation of a new multi-faith prayer space on campus is the perfect example of how we can problem-solve together <br> as a campus community,  </p>
                             </div>
                             <div class="flex gap-5">
                                 <h3 class="text-lg font-extrabold primary-font-color">Price - $22.00</h3>
@@ -277,7 +268,7 @@
                             </div>
                             <div class="">
                                 <h2 class="text-black text-xl font-extrabold pt-4 pb-4">World Cup Flags Football</h2>
-                                <p class=" text-base font-medium paragraph-font-color pb-4">Dolor sit amet consectetur. Ut urna diam <br>  quis sagittis. </p>
+                                <p class=" text-base font-medium paragraph-font-color pb-4">make small changes to the campus that have a large impact <br> said  President Dylan Robinson.</p>
                             </div>
                             <div class="flex gap-5">
                                 <h3 class="text-lg font-extrabold primary-font-color">Price - $22.00</h3>
