--- a/index.html
+++ b/index.html
@@ -182,16 +182,14 @@
             <!-- All Program -->
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-14">
                 <!-- Junior Program -->
-                <div
-                    class="text-white bg-[url('/images/2.png')] bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10 bg-center bg-blend-overlay bg-[#13131880] rounded-xl ">
+                <div style="background-image: url(./Images/2.png);" class="text-white bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10  bg-blend-overlay bg-[#13131880] rounded-xl ">
                     <h3 class="text-3xl font-extrabold">Junior Program</h3>
                     <p class="text-base font-medium pt-4 pb-6">he creation of a new multi-faith prayer space on campus is the perfect example <br>
                         Thompson Rivers University now offers students, faculty and staff private spaces <br> on campus to reflect, pray, and meditate.</p>
                     <a class="btn btn-error text-white text-xl">Register Now!</a>
                 </div>
                 <!-- Teenager Program -->
-                <div
-                    class="text-white bg-[url('/images/3.png')] bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10 bg-center bg-blend-overlay bg-[#13131880] rounded-xl ">
+                <div style="background-image: url(./Images/3.png);" class="text-white bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10  bg-blend-overlay bg-[#13131880] rounded-xl ">
                     <h3 class="text-3xl font-extrabold">Teenager Program</h3>
                     <p class="text-base font-medium pt-4 pb-6">reation of a new multi-faith prayer space on campus is the perfect example <br>
                         hompson Rivers University now offers students, faculty and staff private spaces <br> on campus to reflect, pray, and meditate.</p>
@@ -199,8 +197,7 @@
                 </div>
             </div>
             <!-- Professional Program -->
-            <div
-                class="text-white bg-[url('/images/4.png')] bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10 bg-center bg-blend-overlay bg-[#13131880] rounded-xl mt-6 ">
+            <div style="background-image: url(./Images/4.png);" class="text-white bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10  bg-blend-overlay bg-[#13131880] rounded-xl mt-6 ">
                 <h3 class="text-3xl font-extrabold">Professional Program</h3>
                 <p class="text-base font-medium pt-4 pb-6">The spaces located in Old Main rooms OM 2494 and 2496 will be celebrated with <br> an opening ceremony March 26 at 10 a.m.</p>
                 <a class="btn btn-error text-white text-xl">Register Now!</a>
@@ -308,7 +305,7 @@
                             </div>
                             <div class="">
                                 <h2 class="text-black text-xl font-extrabold pt-4 pb-4">World Cup Flags Football</h2>
-                                <p class=" text-base font-medium paragraph-font-color pb-4">Dolor sit amet consectetur. Ut urna diam <br>  quis sagittis. </p>
+                                <p class=" text-base font-medium paragraph-font-color pb-4">flexible scheduling, allowing groups wishing to engage  <br> in shared spiritual practice to book times each semester. </p>
                             </div>
                             <div class="flex gap-5">
                                 <h3 class="text-lg font-extrabold primary-font-color">Price - $22.00</h3>
@@ -345,8 +342,7 @@
         <section>
             <div class="text-center border-t-2 border-b-2 border-dashed border-gray-300 py-8 space-y-4">
                 <h2 class="text-4xl text-black font-extrabold pb-7">Clients Question</h2>
-                <p class="text-base paragraph-font-color font-medium">Dit amet consectetur. Condimentum dignissim
-                    adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+                <p class="text-base paragraph-font-color font-medium">flexible scheduling, allowing groups wishing to engage in shared spiritual practice  <br> to book times each semester.. </p>
             </div>
             <div class="flex lg:flex-row flex-col gap-10 p-6 mt-20 border-solid border border-neutral-900 border-opacity-10 rounded-2xl ">
                 <img src="./Images/11.png" alt="">
@@ -414,8 +410,7 @@
         <section class="mt-32">
             <div class="text-center border-t-2 border-b-2 border-dashed border-gray-300 py-8 space-y-4">
                 <h2 class="text-4xl text-black font-extrabold pb-7">Get In Touch </h2>
-                <p class="text-base paragraph-font-color font-medium">Dit amet consectetur. Condimentum dignissim
-                    adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+                <p class="text-base paragraph-font-color font-medium">flexible scheduling, allowing groups wishing to engage in shared spiritual practice to book times each semester. </p>
             </div>
 
         </section>
