--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <!-- All Program -->
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-14">
                 <!-- Junior Program -->
-                <div style="background-image: url(./Images/2.png);" class="text-white bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10  bg-blend-overlay bg-[#13131880] rounded-xl ">
+                <div style="background-image: url('./Images/2.png');" class="text-white bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10  bg-blend-overlay bg-[#13131880] rounded-xl ">
                     <h3 class="text-3xl font-extrabold">Junior Program</h3>
                     <p class="text-base font-medium pt-4 pb-6">he creation of a new multi-faith prayer space on campus is the perfect example <br>
                         Thompson Rivers University now offers students, faculty and staff private spaces <br> on campus to reflect, pray, and meditate.</p>
