--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
         <section class="my-24">
             <div class="text-center border-t-2 border-b-2 border-dashed border-gray-300 py-8 space-y-4">
                 <h2 class="text-4xl text-black font-extrabold pb-7">Professional Hockeys Club</h2>
-                <p class="text-base paragraph-font-color font-medium">Dit amet consectetur. Condimentum dignissim
-                    adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+                <p class="text-base paragraph-font-color font-medium">DThompson Rivers University now offers students, faculty and staff private spaces on campus to reflect, pray, and meditate. </p>
             </div>
             <div class=" paragraph-font-color grid grid-cols-1 lg:grid-cols-4 pt-20 pb-20 ">
                 <div class="text-center mt-6">
@@ -162,13 +161,13 @@
                     <div class="radial-progress" style="--value:90; color: #FFB546;" role="progressbar"><span
                             class="text-black font-extrabold">90%</span></div>
                     <h5 class="text-gray-950 text-xl font-semibold pt-5 pb-4">Senior Player</h5>
-                    <p class="text-base">I pray today that you help (name) heal from a hockey injury.</p>
+                    <p class="text-base">I pray today that you help from a hockey injury.</p>
                 </div>
                 <div class="text-center mt-6">
                     <div class="radial-progress" style="--value:80; color: #4C8DF1;" role="progressbar"><span
                             class="text-black font-extrabold">80%</span></div>
                     <h5 class="text-gray-950 text-xl font-semibold pt-5 pb-4">Training Ground</h5>
-                    <p class="text-base">AI pray today that you help (name) heal from a hockey injury.</p>
+                    <p class="text-base">you help to heal from a hockey injury.</p>
                 </div>
             </div>
         </section>
@@ -177,29 +176,29 @@
         <section>
             <div class="text-center border-t-2 border-b-2 border-dashed border-gray-300 py-8 space-y-4 ">
                 <h2 class="text-black text-4xl font-extrabold">Program Sections</h2>
-                <p class="text-base font-medium pt-5"> you have created our bodies so uniquely that they can heal. It is a wondrous mystery to me. I pray today <br> that you help (name) heal from a hockey injury./p>
+                <p class="text-base font-medium pt-5"> you have created our bodies so uniquely that they can heal. It is a wondrous mystery to me.
             </div>
             <!-- All Program -->
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-14">
                 <!-- Junior Program -->
-                <div style="background-image: url('./Images/2.png');" class="text-white bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10  bg-blend-overlay bg-[#13131880] rounded-xl ">
+                <div style="background-image: url(./Images/2.png);" class="text-white bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10  bg-blend-overlay bg-[#13131880] rounded-xl ">
                     <h3 class="text-3xl font-extrabold">Junior Program</h3>
-                    <p class="text-base font-medium pt-4 pb-6">he creation of a new multi-faith prayer space on campus is the perfect example <br>
-                        Thompson Rivers University now offers students, faculty and staff private spaces <br> on campus to reflect, pray, and meditate.</p>
+                    <p class="text-base font-medium pt-4 pb-6">he creation of a new multi-faith prayer space on campus is the perfect example
+                        Thompson Rivers University now offers students</p>
                     <a class="btn btn-error text-white text-xl">Register Now!</a>
                 </div>
                 <!-- Teenager Program -->
                 <div style="background-image: url(./Images/3.png);" class="text-white bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10  bg-blend-overlay bg-[#13131880] rounded-xl ">
                     <h3 class="text-3xl font-extrabold">Teenager Program</h3>
-                    <p class="text-base font-medium pt-4 pb-6">reation of a new multi-faith prayer space on campus is the perfect example <br>
-                        hompson Rivers University now offers students, faculty and staff private spaces <br> on campus to reflect, pray, and meditate.</p>
+                    <p class="text-base font-medium pt-4 pb-6">reation of a new multi-faith prayer space on campus is the perfect example
+                        hompson Rivers University now offers students</p>
                     <a class="btn btn-error text-white text-xl">Register Now!</a>
                 </div>
             </div>
             <!-- Professional Program -->
             <div style="background-image: url(./Images/4.png);" class="text-white bg-cover bg-center bg-no-repeat px-10  pt-24 pb-10  bg-blend-overlay bg-[#13131880] rounded-xl mt-6 ">
                 <h3 class="text-3xl font-extrabold">Professional Program</h3>
-                <p class="text-base font-medium pt-4 pb-6">The spaces located in Old Main rooms OM 2494 and 2496 will be celebrated with <br> an opening ceremony March 26 at 10 a.m.</p>
+                <p class="text-base font-medium pt-4 pb-6">The spaces located in Old Main rooms OM 2494 and 2496 will be celebrated with an opening ceremony March 26 at 10 a.m.</p>
                 <a class="btn btn-error text-white text-xl">Register Now!</a>
             </div>
         </section>
@@ -207,7 +206,7 @@
         <section>
             <div  class="text-center border-t-2 border-b-2 border-dashed border-gray-300 py-8 space-y-4 mt-28 mb">
                 <h2 class="text-4xl text-black text- font-extrabold pb-7">Our New Products</h2>
-                <p text-base paragraph-font-color font-medium>The creation of a new multi-faith prayer space on campus is the perfect example of how we can problem-solve together as a campus community, . </p>
+                <p text-base paragraph-font-color font-medium>The creation of a new multi-faith prayer space on campus . </p>
 
             </div>
                 <div class="grid gap-6 grid-cols-1 lg:grid-cols-2 lg:grid-rows-3 mt-12 mb-24">
@@ -225,7 +224,7 @@
                             </div>
                             <div class="">
                                 <h2 class="text-black text-xl font-extrabold pt-4 pb-4">World Cup Flags Football</h2>
-                                <p class=" text-base font-medium paragraph-font-color pb-4">The creation of a new multi-faith <br> prayer space on campus   </p>
+                                <p class=" text-base font-medium paragraph-font-color pb-4">The creation of a new multi-faith  prayer space on campus   </p>
                             </div>
                             <div class="flex gap-5">
                                 <h3 class="text-lg font-extrabold primary-font-color">Price - $22.00</h3>
@@ -245,7 +244,7 @@
                             </div>
                             <div class="">
                                 <h2 class="text-black text-xl font-extrabold pt-4 pb-4">World Cup Flags Football</h2>
-                                <p class=" text-base font-medium paragraph-font-color pb-4">The creation of a new multi-faith prayer space on campus is the perfect example of how we can problem-solve together <br> as a campus community,  </p>
+                                <p class=" text-base font-medium paragraph-font-color pb-4">The creation of a new multi-faith prayer space  </p>
                             </div>
                             <div class="flex gap-5">
                                 <h3 class="text-lg font-extrabold primary-font-color">Price - $22.00</h3>
@@ -265,7 +264,7 @@
                             </div>
                             <div class="">
                                 <h2 class="text-black text-xl font-extrabold pt-4 pb-4">World Cup Flags Football</h2>
-                                <p class=" text-base font-medium paragraph-font-color pb-4">make small changes to the campus that have a large impact <br> said  President Dylan Robinson.</p>
+                                <p class=" text-base font-medium paragraph-font-color pb-4">make small changes to the campus that have a large impact.</p>
                             </div>
                             <div class="flex gap-5">
                                 <h3 class="text-lg font-extrabold primary-font-color">Price - $22.00</h3>
@@ -285,7 +284,7 @@
                             </div>
                             <div class="">
                                 <h2 class="text-black text-xl font-extrabold pt-4 pb-4">World Cup Flags Football</h2>
-                                <p class=" text-base font-medium paragraph-font-color pb-4">Dolor sit amet consectetur. Ut urna diam <br>  quis sagittis. </p>
+                                <p class=" text-base font-medium paragraph-font-color pb-4">ke small changes to the campus that have a large impact. </p>
                             </div>
                             <div class="flex gap-5">
                                 <h3 class="text-lg font-extrabold primary-font-color">Price - $22.00</h3>
@@ -305,7 +304,7 @@
                             </div>
                             <div class="">
                                 <h2 class="text-black text-xl font-extrabold pt-4 pb-4">World Cup Flags Football</h2>
-                                <p class=" text-base font-medium paragraph-font-color pb-4">flexible scheduling, allowing groups wishing to engage  <br> in shared spiritual practice to book times each semester. </p>
+                                <p class=" text-base font-medium paragraph-font-color pb-4">flexible scheduling, allowing groups wishing to engage  in shared. </p>
                             </div>
                             <div class="flex gap-5">
                                 <h3 class="text-lg font-extrabold primary-font-color">Price - $22.00</h3>
